--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "2">
     <tr>
-      <td><img src="/Users/zoeyzhou/Desktop/Web Development/HTML- personal Site/image/shedule.png" alt="picture of my shcedule"></td>
+      <td><img src="image/shedule.png" alt="picture of my shcedule"></td>
       <td><p>this is a pic of my <br> schedule</p></td>
     </tr>
   </table>
